--- a/po/fr.po
+++ b/po/fr.po
@@ -19,16 +19,16 @@ msgstr ""
 
 #: ../app/Main.qml:120
 #: /home/mariogrip/build-uAdBlock-Ubuntu_Device4_GCC_armhf_ubuntu_sdk_15_04_builder_armhf-Default/po/uAdBlock.desktop.in.h:1
-msgid "uAdBlock"
-msgstr "uAdBlock"
+msgid "uAdBlockNG"
+msgstr "uAdBlockNG"
 
 #: ../app/Main.qml:164
 msgid "Please note that this app will modify your readonly filesystem"
 msgstr "Veuillez noter que cette application modifiera votre système de fichiers en lecture seule"
 
 #: ../app/Main.qml:170
-msgid "uAdBlock enabled"
-msgstr "uAdBlock activé"
+msgid "uAdBlockNG enabled"
+msgstr "uAdBlockNG activé"
 
 #: ../app/Main.qml:192
 msgid "Last updated"
